--- a/src/app/champion-a-cause/champion-a-cause.component.html
+++ b/src/app/champion-a-cause/champion-a-cause.component.html
@@ -22,6 +22,39 @@
 </ul>
 
 
+<ul class="list">
+    <li class="list-item"
+        *ngFor="let employee of employees | searchEmployees:'firstname,lastname,champion,title':searchText">
+        <div class="list-content">
+            <div style="border-bottom: 2px solid black; margin-bottom: 5px;">
+                <a [routerLink]="['/employee', employee.employeeid]">
+                    <div class="avatar" style="float: left; margin-right: 10px; margin-bottom: 5px;">
+                        <img class="avatar" src='{{ employee.tileimageurl }}' />
+                    </div>
+                    <div style="margin-bottom: 5px;">
+                        <div class="list-title">{{ employee.firstname }} {{ employee.lastname}}</div>
+                        <div class="list-subtitle">{{ employee.title}}</div>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <div>
+                    <strong>{{employee.champion}}</strong>
+                </div>
+                <div class="champion-a-cause-div">
+                    
+                       <img class="champion-a-cause-img" style="text-align: center;"
+                     src="../../assets/images/Champion-a-Cause-Logos-DEMO/{{employee.champion}}.jpg">
+                     
+                </div>
+                <div>
+                    {{employee.championquote}}
+                </div>
+            </div>
+        </div>
+    </li>
+</ul>
+
 <!-- Pizza Example -->
 <div class="big">
     <article class="recipe">
@@ -49,13 +82,16 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#000000">
                     <path
                         d="M 6.0097656 2 C 4.9143111 2 4.0097656 2.9025988 4.0097656 3.9980469 L 4 22 L 12 19 L 20 22 L 20 20.556641 L 20 4 C 20 2.9069372 19.093063 2 18 2 L 6.0097656 2 z M 6.0097656 4 L 18 4 L 18 19.113281 L 12 16.863281 L 6.0019531 19.113281 L 6.0097656 4 z"
-                        fill="currentColor" /></svg>
+                        fill="currentColor" />
+                </svg>
                 Save
             </button>
 
         </div>
     </article>
 </div>
+
+
 
 <div class="big">
     <article class="recipe">
@@ -82,7 +118,8 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#000000">
                     <path
                         d="M 6.0097656 2 C 4.9143111 2 4.0097656 2.9025988 4.0097656 3.9980469 L 4 22 L 12 19 L 20 22 L 20 20.556641 L 20 4 C 20 2.9069372 19.093063 2 18 2 L 6.0097656 2 z M 6.0097656 4 L 18 4 L 18 19.113281 L 12 16.863281 L 6.0019531 19.113281 L 6.0097656 4 z"
-                        fill="currentColor" /></svg>
+                        fill="currentColor" />
+                </svg>
                 Save
             </button>
 
@@ -116,7 +153,8 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#000000">
                     <path
                         d="M 6.0097656 2 C 4.9143111 2 4.0097656 2.9025988 4.0097656 3.9980469 L 4 22 L 12 19 L 20 22 L 20 20.556641 L 20 4 C 20 2.9069372 19.093063 2 18 2 L 6.0097656 2 z M 6.0097656 4 L 18 4 L 18 19.113281 L 12 16.863281 L 6.0019531 19.113281 L 6.0097656 4 z"
-                        fill="currentColor" /></svg>
+                        fill="currentColor" />
+                </svg>
                 Save
             </button>
 
@@ -149,7 +187,8 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#000000">
                     <path
                         d="M 6.0097656 2 C 4.9143111 2 4.0097656 2.9025988 4.0097656 3.9980469 L 4 22 L 12 19 L 20 22 L 20 20.556641 L 20 4 C 20 2.9069372 19.093063 2 18 2 L 6.0097656 2 z M 6.0097656 4 L 18 4 L 18 19.113281 L 12 16.863281 L 6.0019531 19.113281 L 6.0097656 4 z"
-                        fill="currentColor" /></svg>
+                        fill="currentColor" />
+                </svg>
                 Save
             </button>
 
@@ -182,7 +221,8 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#000000">
                     <path
                         d="M 6.0097656 2 C 4.9143111 2 4.0097656 2.9025988 4.0097656 3.9980469 L 4 22 L 12 19 L 20 22 L 20 20.556641 L 20 4 C 20 2.9069372 19.093063 2 18 2 L 6.0097656 2 z M 6.0097656 4 L 18 4 L 18 19.113281 L 12 16.863281 L 6.0019531 19.113281 L 6.0097656 4 z"
-                        fill="currentColor" /></svg>
+                        fill="currentColor" />
+                </svg>
                 Save
             </button>
 
@@ -216,7 +256,8 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#000000">
                     <path
                         d="M 6.0097656 2 C 4.9143111 2 4.0097656 2.9025988 4.0097656 3.9980469 L 4 22 L 12 19 L 20 22 L 20 20.556641 L 20 4 C 20 2.9069372 19.093063 2 18 2 L 6.0097656 2 z M 6.0097656 4 L 18 4 L 18 19.113281 L 12 16.863281 L 6.0019531 19.113281 L 6.0097656 4 z"
-                        fill="currentColor" /></svg>
+                        fill="currentColor" />
+                </svg>
                 Save
             </button>
 
@@ -263,7 +304,8 @@
                             fill="#000000">
                             <path
                                 d="M 6.0097656 2 C 4.9143111 2 4.0097656 2.9025988 4.0097656 3.9980469 L 4 22 L 12 19 L 20 22 L 20 20.556641 L 20 4 C 20 2.9069372 19.093063 2 18 2 L 6.0097656 2 z M 6.0097656 4 L 18 4 L 18 19.113281 L 12 16.863281 L 6.0019531 19.113281 L 6.0097656 4 z"
-                                fill="currentColor" /></svg>
+                                fill="currentColor" />
+                        </svg>
                         Save
                     </button>
 
@@ -298,7 +340,8 @@
                             fill="#000000">
                             <path
                                 d="M 6.0097656 2 C 4.9143111 2 4.0097656 2.9025988 4.0097656 3.9980469 L 4 22 L 12 19 L 20 22 L 20 20.556641 L 20 4 C 20 2.9069372 19.093063 2 18 2 L 6.0097656 2 z M 6.0097656 4 L 18 4 L 18 19.113281 L 12 16.863281 L 6.0019531 19.113281 L 6.0097656 4 z"
-                                fill="currentColor" /></svg>
+                                fill="currentColor" />
+                        </svg>
                         Save
                     </button>
 
