one change for commit

--- a/src/app/champion-a-cause/champion-a-cause.component.html
+++ b/src/app/champion-a-cause/champion-a-cause.component.html
@@ -21,7 +21,7 @@
     </li>
 </ul>
 
-
+<!--comment for commit -->
 <ul class="list">
     <li class="list-item"
         *ngFor="let employee of employees | searchEmployees:'firstname,lastname,champion,title':searchText">
