--- a/src/app/champion-a-cause/champion-a-cause.component.html
+++ b/src/app/champion-a-cause/champion-a-cause.component.html
@@ -23,13 +23,8 @@
                 </a>
             </div>
             <div>
-                <div class="champion-a-cause-div" *ngFor="let cause of causes | getEmployeeCause:employee.champion">
-                    <div *ngIf="cause.causeimageurl !== ''; then thenBlock else elseBlock"></div>
-                    <ng-template #thenBlock><img class="champion-a-cause-img" style="text-align: center;"
-                            src="{{cause.causeimageurl}}" /></ng-template>
-                    <ng-template #elseBlock><img class="champion-a-cause-img" style="text-align: center;"
-                            src="https://photos.smugmug.com/photos/i-6gQtsGT/0/4102babb/Ti/i-6gQtsGT-Ti.png" />
-                    </ng-template>
+                <div class="champion-a-cause-div">
+                    <img src="{{ employee.championurl }}" class="champion-a-cause-img" style="text-align: center;" />
                 </div>
                 <div>
                     <strong>{{employee.champion}}</strong>
