--- a/src/app/champion-a-cause/champion-a-cause.component.css
+++ b/src/app/champion-a-cause/champion-a-cause.component.css
@@ -57,8 +57,8 @@ a:hover {
   display: flex;
   padding: 0.2em;
   width: 100%;
-  background-color: #056cb6;
   margin: 5px;
+  border: 1px solid rgba(0, 0, 0, 0.15)
 }
 
 @media all and (min-width: 40em) {
