--- a/src/app/champion-a-cause/champion-a-cause.component.css
+++ b/src/app/champion-a-cause/champion-a-cause.component.css
@@ -586,3 +586,28 @@ body {
   width: clamp(320px, 35%, 480px);
   padding: 24px;
 }
+
+.avatar {
+  vertical-align: middle;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.champion-a-cause-div {
+  display: inline-block;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  width: 100%;
+  height: 150px;
+}
+
+.champion-a-cause-img {
+  object-fit: contain;
+  min-width: 100%;
+  min-height: 100%;
+  max-width: 98%;
+  max-height: 98%;
+}
