fixed avatar image position

--- a/src/app/champion-a-cause/champion-a-cause.component.css
+++ b/src/app/champion-a-cause/champion-a-cause.component.css
@@ -120,6 +120,7 @@ img {
   height: 50px;
   border-radius: 50%;
   object-fit: cover;
+  object-position: center top;
 }
 
 .champion-a-cause-div {
